correction alignement titres

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ footer {
 }
 
 .section-title {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
